--- a/DistributedOnlineEnrollmentSystem/AuthNode/Dockerfile
+++ b/DistributedOnlineEnrollmentSystem/AuthNode/Dockerfile
@@ -1,29 +1,29 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER app
+# Base image for runtime
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-
-# This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["AuthNode/AuthNode.csproj", "AuthNode/"]
-RUN dotnet restore "./AuthNode/AuthNode.csproj"
-COPY . .
-WORKDIR "/src/AuthNode"
-RUN dotnet build "./AuthNode.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Copy only the .csproj file for restore (for caching efficiency)
+COPY ["AuthNode/AuthNode.csproj", "AuthNode/"]
+RUN dotnet restore "AuthNode/AuthNode.csproj"
+
+# Copy only the AuthNode source code
+COPY AuthNode/. ./AuthNode/
+WORKDIR /src/AuthNode
+RUN dotnet build "AuthNode.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./AuthNode.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "AuthNode.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
