--- a/DistributedOnlineEnrollmentSystem/InstructorNode/InstructorNode.csproj
+++ b/DistributedOnlineEnrollmentSystem/InstructorNode/InstructorNode.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3c7e4915-2ef6-4540-84a9-aa4a1cf23aed</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -17,6 +19,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
