--- a/DistributedOnlineEnrollmentSystem/AuthNode/Dockerfile
+++ b/DistributedOnlineEnrollmentSystem/AuthNode/Dockerfile
@@ -1,11 +1,11 @@
 # Base image for runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
+
 
 # Build stage
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
@@ -14,7 +14,8 @@ COPY ["AuthNode/AuthNode.csproj", "AuthNode/"]
 RUN dotnet restore "AuthNode/AuthNode.csproj"
 
 # Copy only the AuthNode source code
-COPY AuthNode/. ./AuthNode/
+#COPY AuthNode/. ./AuthNode/
+COPY . .
 WORKDIR /src/AuthNode
 RUN dotnet build "AuthNode.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
