--- a/DistributedOnlineEnrollmentSystem/BasicFacilitiesNode/Dockerfile
+++ b/DistributedOnlineEnrollmentSystem/BasicFacilitiesNode/Dockerfile
@@ -1,11 +1,11 @@
 # Base runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
+ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
-EXPOSE 8081
 
 # Build stage
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
@@ -14,7 +14,8 @@ COPY ["BasicFacilitiesNode/BasicFacilitiesNode.csproj", "BasicFacilitiesNode/"]
 RUN dotnet restore "BasicFacilitiesNode/BasicFacilitiesNode.csproj"
 
 # Copy only the BasicFacilitiesNode code
-COPY BasicFacilitiesNode/. ./BasicFacilitiesNode/
+#COPY BasicFacilitiesNode/. ./BasicFacilitiesNode/
+COPY . .
 WORKDIR /src/BasicFacilitiesNode
 RUN dotnet build "BasicFacilitiesNode.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
