--- a/DistributedOnlineEnrollmentSystem/InstructorNode/Dockerfile
+++ b/DistributedOnlineEnrollmentSystem/InstructorNode/Dockerfile
@@ -1,11 +1,11 @@
 # Base image for runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
+ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
-EXPOSE 8081
 
 # Build image
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
@@ -14,7 +14,8 @@ COPY ["InstructorNode/InstructorNode.csproj", "InstructorNode/"]
 RUN dotnet restore "InstructorNode/InstructorNode.csproj"
 
 # Copy ONLY the source code for InstructorNode
-COPY InstructorNode/. ./InstructorNode/
+# COPY InstructorNode/. ./InstructorNode/
+COPY . .
 WORKDIR /src/InstructorNode
 RUN dotnet build "InstructorNode.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
