--- a/DistributedOnlineEnrollmentSystem/docker-compose.yml
+++ b/DistributedOnlineEnrollmentSystem/docker-compose.yml
@@ -3,8 +3,10 @@ services:
     build:
       context: .
       dockerfile: ViewsNode/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://+:8080
     ports:
-      - "5000:80"
+      - "5000:8080"
     depends_on:
       - authnode
       - basicfacilitiesnode
@@ -15,26 +17,34 @@ services:
     build:
       context: .
       dockerfile: AuthNode/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://+:8080
     ports:
-      - "5001:80"
+      - "5001:8080"
 
   basicfacilitiesnode:
     build:
       context: .
       dockerfile: BasicFacilitiesNode/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://+:8080
     ports:
-      - "5002:80"
+      - "5002:8080"
 
   instructornode:
     build:
       context: .
       dockerfile: InstructorNode/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://+:8080
     ports:
-      - "5003:80"
+      - "5003:8080"
 
   studentnode:
     build:
       context: .
       dockerfile: StudentNode/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://+:8080
     ports:
-      - "5004:80"
+      - "5004:8080"
