--- a/DistributedOnlineEnrollmentSystem/BasicFacilitiesNode/Dockerfile
+++ b/DistributedOnlineEnrollmentSystem/BasicFacilitiesNode/Dockerfile
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
+EXPOSE 8082
 
 # Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
