--- a/DistributedOnlineEnrollmentSystem/InstructorNode/Dockerfile
+++ b/DistributedOnlineEnrollmentSystem/InstructorNode/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
-
+EXPOSE 8083
 # Build image
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
